--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,12 +19,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=always_fit_db
+DB_USERNAME=always_fit
+DB_PASSWORD=always
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
